fix spacing fix demo data

--- a/src/elements/tile/tile.scss
+++ b/src/elements/tile/tile.scss
@@ -27,7 +27,7 @@ zn-tile[d], :host([d]) {
 
     slot[name="primary"] {
       @apply min-w-[110px] w-[110px];
-      flex-basis: 110px;
+      flex-basis: 130px;
     }
 
     zn-prop, slot[name="chip"] {
